mullvad-update/src/version/snapshots/mullvad_update__version__info__test__version_unsupported_filtering.snap
---
source: mullvad-update/src/version/info.rs
expression: info
---
stable:
  version: "2026.10"
  urls: []
  size: 0
  changelog: ""
  changelog_translations: {}
  sha256:
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
beta: ~
